# Notion_Zotero

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  README.md  notion_zotero_detailed_patch_plan.md  original_db_summary_analysis.ipynb  pyproject.toml  pytest.ini  requirements.txt  tmp_import_check.py  to_integrate.py
.claude/: settings.local.json
.github/workflows/: ci.yml  lint.yml  pytest.yml  regenerate-sanitized-summary.yml  test.yml  type-check.yml
docs/: api_reference.md  architecture.md  canonical_schema.md  cli.md  constraints.md  contributing.md  domain_packs.md  field_classification.md  handoff_to_staging.md  importer.md  migration_diffs_v2_v3.csv  migration_guide.md  migration_report_v2_to_v3.md  modes.md  reading_list_to_canonical_mapping.md  relationship_model.md  source_of_truth.md  sync_design.md  task_registry.md  templates.md  v3_gap_analysis.md  write_log_design.md
fixtures/: canonical_merged.json
fixtures/canonical/: 003e69cb-f908-470d-bab2-c26eed3c63d3.canonical.json  00f24000-f241-438b-a023-d872bc2b59e6.canonical.json  02eedcf7-bc5a-406e-ba94-01f7e39a25cd.canonical.json  (+439 more)
legacy/: migration_audit.py
migration_audit/: migration_report.json  sanitized_summary.json  summary.csv
scripts/: aggregate_canonical.py  create_kernel.ps1  export_database_http.py  export_reading_list.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  (+11 more)
tests/: conftest.py  test_analysis_layer.py  test_apply_mode.py  test_cli.py  test_cli_new_commands.py  test_connector_gates.py  test_coverage_sprint.py  test_dedupe.py  test_diff_cli.py  test_diff_engine.py  test_domain_pack_import_guard.py  test_field_ownership.py  test_field_ownership_enforcement.py  test_importer_integration.py  test_legacy_path_guard.py  test_models_roundtrip.py  test_notion_client.py  test_notion_enrichment.py  test_notion_property_serialization.py  test_notion_reader.py  test_paper_summary_tables.py  test_pull_cli.py  test_pull_commands.py  test_reading_list_importer.py  test_schema_registry.py  test_semantic_mappings.py  test_services_smoke.py  test_smoke_cli.py  test_smoke_importer.py  test_sync_cli.py  test_sync_plan_applier.py  test_sync_planner.py  test_table_normalization_aliases.py  test_template_validation.py  test_templates_registry.py  test_visualization_helpers.py  test_write_log.py  test_write_path_interception.py  test_zotero_client.py  test_zotero_reader.py
tools/: archive_legacy.py  generate_sanitized_summary.py  migration_audit.py  move_legacy_to_top.py  run_analysis.py
(+974 files in other folders)
