[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_zotero"
version = "0.1.0"
description = "Notion ↔ Zotero extraction and canonicalization toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [ {name = "Ricardo Santos"} ]
dependencies = [
  "notion-client<3.0",
  "python-dotenv",
  "pydantic>=2",
  "polars>=0.20",
  "requests>=2.28",
  "tenacity>=8.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pyyaml>=6.0",
]

analysis = [
  "pandas>=1.5",
  "numpy>=1.24",
  "polars>=0.20",
  "httpx",
  "ipykernel",
  "jupyterlab",
  "nbclient",
  "nbformat",
  "matplotlib",
  "seaborn",
  "spacy",
  "nltk",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/notion_zotero --cov-report=term-missing --cov-fail-under=80"

[project.scripts]
export-reading-list = "notion_zotero.scripts.export_reading_list:main"
import-reading-list = "notion_zotero.services.reading_list_importer:main"
notion-zotero = "notion_zotero.cli:main"
